fixed some spacing issues

--- a/styles.css
+++ b/styles.css
@@ -230,6 +230,13 @@ a:active {
   padding: 0 70px;
 }
 
+#bike-details .bike-inner {
+  width: 15%;
+  border-bottom: 5px solid #758598;
+  height: 1px;
+  margin: 0 auto;
+}
+
 #bike-details h2 {
   color: #4a4f57;
 }
@@ -249,6 +256,13 @@ a:active {
   background-color: #758598;
   text-align: center;
   padding-bottom: 60px;
+}
+
+#instructors .ride-inner {
+  width: 15%;
+  border-bottom: 5px solid #b2c1d2;
+  height: 1px;
+  margin: 15px auto 0;
 }
 
 #instructors .full-schedule-button {
@@ -335,6 +349,14 @@ a:active {
 
 #app-section h2 {
   color: #4a4f57;
+}
+
+#app-section .app-inner {
+  width: 25%;
+  border-bottom: 5px solid #758598;
+  height: 1px;
+  margin: 15px auto 15px;
+  
 }
 
 #app-section h6 {
